# CRP_Master

./: .gitignore  README.md  REPRODUCTION_NOTES.md  pyproject.toml
Project/CRP_DL/: README.md  proposal_htr.md
Project/CRP_DL/crpsp/: astar.py  env.py  evaluate.py  htr_env.py  lower_bound.py  mip_cpsat.py  models_htr.py  ppo.py  ppo_htr.py  subproblem.py
Project/CRP_DL/experiments/: table4_ppo_vs_astar.py  table9_voting_vs_heuristic.py  train_htr.py
configs/: default.yaml
crpsp/: README.md  astar.py  ensemble.py  env.py  heuristic.py  instance.py  models.py  transfer.py
docs/superpowers/plans/: 2026-07-04-crpsp-reproduction.md  (+1 more)
experiments/: common.py  table2_mip.py  table3_astar.py  table4_ppo_vs_astar.py  table5_attention_ablation.py  table6_7_reward_ablation.py  table8_ensemble.py  table9_voting_vs_heuristic.py  train_ppo.py
spp_ac/: .gitignore  README.md  config.py  config.yaml  generate.py  main.py  requirements.txt
spp_ac/data/: cdg.py
spp_ac/env/: bay.py  container.py  reward.py  sequence.py  spp_env.py
spp_ac/models/: actor.py  critic.py  decoder.py  encoder.py
spp_ac/training/: trainer.py
tests/: test_astar.py  test_crp_mode.py  test_ensemble.py  test_env.py  test_evaluate.py  test_experiments_smoke.py  test_heuristic.py  test_instance.py  test_lower_bound.py  test_mip.py  test_models.py  test_ppo.py  test_sanity.py
tests/spp_ac/: test_actor.py  test_bay.py  test_cdg.py  test_container.py  test_critic.py  test_decoder.py  test_encoder.py  test_env.py  test_generate.py  test_reward.py  test_sequence.py  test_trainer.py
(+2 files in other folders)
